# spotify-sdk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  zensical.toml
.changes/: 0.0.0a1.json  0.1.0.json  0.1.1.json  0.10.0.json  0.2.0.json  0.3.0.json  0.4.0.json  0.5.0.json  0.6.0.json  0.7.0.json  0.8.0.json  0.9.0.json  0.9.1.json
.changes/next-release/: 103774280674375-enhancement-album-77826.json  108652800892708-enhancement-tracks-48758.json  1772999636075916-breaking-artists-93307.json  1773001115457385-breaking-albums-45832.json  1773002338912480-feature-audiobooks-64128.json  1773002848808074-breaking-audiobooks-67232.json  1773003747333528-feature-tracks-45871.json  1773003996089350-breaking-tracks-74985.json  1773050000000000-breaking-playlists-18452.json  186206729898125-feature-client-48900.json  186259464762833-feature-client-97295.json  20260301-auth-local-authorize-method.json  220918271077208-feature-artists-96498.json  321723405865125-feature-auth-15851.json  321723405865126-documentation-auth-15851.json  372319032112166-feature-audiobooks-42138.json  372334842218458-feature-audiobooks-40320.json  409284292373250-feature-chapters-76381.json  450402487762916-feature-player-21507.json  458049098949875-bugfix-cache-87735.json  462095736554958-breaking-users-35739.json  485483998024000-feature-auth-61055.json  521330660884291-feature-users-69565.json  521418462766083-enhancement-users-48106.json  585230349092791-feature-albums-40634.json  760487800338708-feature-shows-53177.json  760709964220311-feature-episodes-service.json  760871226548913-feature-search-service.json  996114390721958-feature-playlists-30870.json  breaking-id-parameter-naming.json  enhancement-pydocstyle-linting.json  feature-playlists.json
.changes/templates/: CHANGELOG
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: changelog.md  index.md  installation.md  quickstart.md
docs/design/: async-first-architecture.md  index.md
docs/reference/: auth.md  clients.md  index.md  models.md
scripts/: check_no_sync_prefix.py  run_unasync.py
src/spotify_sdk/: __init__.py  _auth_shared.py  _base_client.py  _base_service.py  client.py
tests/: conftest.py  test_auth_helpers.py  test_exceptions.py
tests/_async/: test_album_service.py  test_audiobook_service.py  test_auth_authorization_code.py  test_auth_client_credentials.py  test_auth_file_token_cache.py  test_base_client.py  test_chapter_service.py  test_client.py  test_episode_service.py  test_library_service.py  (+6 more)
(+99 files in other folders)
