[project]
name = "spotify-sdk"
version = "0.1.1"
description = "Add your description here"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "jonathan343", email = "jonathangee09@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "ruff>=0.14.13",
]
test = [
    "pytest>=9.0.2",
    "pytest-httpx>=0.36.0",
]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  "jmeslog>=0.2.0",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  # flake8-async: Checks for problems related to asyncio
  "ASYNC",
  # flake8-logging: Checks for issues when using the logging module
  "LOG",
  # isort: Checks for un-sorted, un-formatted, and missing imports
  "I",
  # Checks for unused imports
  "F401"
]

[tool.ruff.format]
docstring-code-format = true
